# askama-enum

./: Cargo.toml  LICENSE-ISC  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: has_feature_testing.rs  simple.rs  test.rs  with_generics.rs
