[package]
name = "askama-enum"
version = "0.0.1"
description = "Implement different askama templates for different enum variants"
homepage = "https://github.com/Kijewski/askama-enum"
repository = "https://github.com/Kijewski/askama-enum"
license = "ISC OR MIT OR Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
askama = "0.11.1"
