[package]
name = "askama-enum"
version = "0.0.2"
description = "Implement different askama templates for different enum variants"
homepage = "https://github.com/Kijewski/askama-enum"
repository = "https://github.com/Kijewski/askama-enum"
license = "ISC OR MIT OR Apache-2.0 WITH LLVM-exception"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
askama = { version = "0.12.0", optional = true, default-features = false }
quote = "1"
syn = { version = "1", features = ["full"] }

[features]
# Internal feature, used when generating docs. *You* are not supposed to enable this feature!
docsrs = ["askama"]

# Internal feature, used when testing.
testing = ["askama"]

[package.metadata.docs.rs]
features = ["docsrs"]
